--- a/writing/_cogsci2016/habituals-cogsci2016.bib
+++ b/writing/_cogsci2016/habituals-cogsci2016.bib
@@ -160,6 +160,15 @@ year = {2008}
   year = {2013} 
 }
 
+@article{Lassiter2015, 
+  author = {Lassiter, D. and Goodman, N. D.}, 
+  date-modified = {2015-06-28 14:22:52 +0000}, 
+  journal = {Synthese}, 
+  title = {Adjectival vagueness in a Bayesian model of interpretation}, 
+  website = {papers/LassiterGoodman2015-Synthese.pdf}, 
+  year = {2015} 
+}
+
 @article{Leslie2008,
   author = {Leslie, Sarah-Jane},
   journal = {Philosophical Review},
