update fig 3; adjust fig2 size

--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -259,7 +259,7 @@ The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habit
 
 \begin{figure*}[t]
 \centering
-  \includegraphics[width=\textwidth]{tj-scatters}
+  \includegraphics[width=0.85\textwidth]{tj-scatters}
   \caption{Human acceptability judgments as a function of the log frequency of action (left) and speaker $S_2$ model predictions (right) for ninety-three unique items (action X frequency level). 
   Color denotes target-individual frequency of action (log scale), with lighter colors indicating more frequent actions. Error bars correspond to 95\% bootstrapped confidence intervals for the participant data and 95\% highest probability intervals for the model predictions. Error bars suppressed and points jittered on left facet for visual clarity.}
   \label{fig:tjScatters}
