--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -156,13 +156,15 @@ This has important implications about the relationship between linguistic genera
 A habitual sentence expresses a generalization about the tendency of an individual to participate in a kind of event\footnote{
 We articulate the formalization in terms of individuals, but the theory applies straightforwardly to events without actors (e.g \emph{It rains around here.}).
 }.
-For a given individual $I$ (e.g.~\textsc{Bill}) and an event or behavior $E$ (e.g.~\textsc{smoking}), we refer to the rate at which an individual $I$ participates in an event $E$ for a given time window $t$, that is $ \lambda_{t} = \int_{t} \mathbbm{1}_{I \in E}dt$, as the \emph{propensity} of $I$ doing $E$.
+For a given individual $I$ (e.g.~\textsc{Bill}) and an event or behavior $E$ (e.g.~\textsc{smoking}), we refer to the rate at which an individual $I$ participates in an event $E$ for a given time window $t$ 
+%that is $ \lambda_{t} = \int_{t} \mathbbm{1}_{I \in E}dt$, 
+as the \emph{propensity} of $I$ doing $E$, denoted  $\lambda$.
 %\ndg{maybe it's better to talk about the underlying scale as a rate? what's up with the ** in the integral here?}
 %
-A natural denotation for the habitual is a simple threshold on propensity $\lambda_{t} > \tau$ \cite<c.f.>{Cohen1999}, yet no fixed value for $\tau$ would lead to the observed flexibility of truth conditions (e.g. \emph{Bill smokes} vs. \emph{writes novels}).
+A natural denotation for the habitual is a simple threshold on propensity $\lambda > \tau$ \cite<c.f.>{Cohen1999}, yet no fixed value for $\tau$ would lead to the observed flexibility of truth conditions (e.g. \emph{Bill smokes} vs. \emph{writes novels}).
 Building on \citeA{Lassiter2013,Lassiter2015}, we posit that this threshold is not a fixed property of the language, but is established by pragmatic inference.
 
-We model a speaker $S_2$ who reasons about a pragmatic listener $L_1$; this listener is considering the propensity of a certain behavior for a certain individual, $\lambda$.
+We model a speaker $S_2$ who reasons about a pragmatic listener $L_1$; this listener is considering the propensity of a certain behavior for a certain individual.
 The listener $L_1$ has uncertainty about the appropriate threshold for the habitual in this context, and reasons about what an informative speaker $S_1$ would be likely to say. The speaker $S_1$ in turn reasons about an idealized literal listener $L_0$, who has access to the threshold $\tau$ (i.e. $S_1$ believes $L_0$ will interpret him in exactly the way he means). 
 %$S_2$ ultimately decides whether to produce the habitual or stay silent (i.e.~produce a \emph{null} utterance that has no information content).
 %
@@ -181,13 +183,13 @@ We take the pragmatic speaker $S_2$ to consider two utterances: the habitual, wi
 Equation \ref{eq:S2} can then be interpreted as a model of felicity or truth judgments \cite{Degen2014, TesslerUnderReview}.
 The speaker will choose to produce the habitual when the true propensity $\lambda$ is more likely under $L_1$'s posterior given the habitual than under her prior. 
 %Critically, speaker $S_{2}$ doesn't have a particular meaning of the habitual in mind (i.e. doesn't have access to the threshold $\tau$), but knows that $L_{1}$ will consider it, and integrates over the likely values she'll consider.
-This model is nearly identical with the model we have proposed for generic language \cite{TesslerUnderReview}, with the only difference being the underlying degree scale----\emph{propensity} of a behavior vs. \emph{prevalence} of a property. 
+%This model is nearly identical with the model we have proposed for generic language \cite{TesslerUnderReview}, with the only difference being the underlying degree scale----\emph{propensity} of a behavior vs. \emph{prevalence} of a property. 
 
 The prior, $P(\lambda)$ in Eqs.~\ref{eq:L1} and \ref{eq:L0}, specifies prior beliefs about the propensity of a specific event or behavior (e.g.~\emph{smoking}) across different individuals.
 \emph{A priori}, it is unclear how far to extend this \emph{contrast class}: Does it include beliefs about \emph{all} people, or just individuals within a predefined subclass e.g. individuals of the same gender, individuals of the same age? 
 This is important because the meaning of the habitual (the threshold $\tau$) is derived with respect to the prior. 
 If the priors differed by gender (e.g., in the propensity to ``wear bras'') and if language interpreters took the prior to be with respect to a particular gender, the model would predict differences in the truth conditions by gender (e.g., in ``Susan wears a bra.'' vs. ``Bill wears a bra.''). 
-In Expts.~1\&2, we begin to address this issue.
+In Expts.~1\&2, we explore this issue.
 %\ndg{do we have to say something about contrast classes? maybe in model section?}
 %\ndg{since we don't use $L_1$ directly here, i'd stick $S_2$ onto the top of the above eqnarray and just start there...}
 %The pragmatic listener $L_1$ (Eq.~\ref{eq:L1}) is a model of interpreting habituals: Upon hearing a habitual, what frequency is a listener likely to infer?
@@ -273,24 +275,24 @@ The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habit
 \subsection{Data analysis and results}
 We built a Bayesian data analysis model for this prior elicitation task.
 Question 1 elicits the proportion of people who have done an action before. 
-We model this data as coming from a Beta distribution. 
-Question 2 elicits the relative frequency that a person does the action.
-This was modeled by a log-normal distribution. 
+We model this data as coming from a Beta distribution: $d_{1} \sim \text{Beta}(\gamma_{1}, \xi_{1})$. 
+Question 2 elicits the rate, or relative frequency, with which a person does the action.
+This was modeled by a log-normal distribution: $\ln d_{2} \sim \text{Gaussian}(\mu_{2}, \sigma_{2})$. 
 Each item was modeled independently for each gender.
-%
-\begin{minipage}{0.5 \textwidth} \small
-\begin{align*}
-d_{1} &\sim \text{Beta}(\gamma_{1}, \xi_{1}) \\
-\ln d_{2} &\sim \text{Gaussian}(\mu_{2}, \sigma_{2}) \\
-\end{align*}
-\end{minipage}
-%
+%%
+%\begin{minipage}{0.5 \textwidth} \small
+%\begin{align*}
+%d_{1} &\sim \text{Beta}(\gamma_{1}, \xi_{1}) \\
+%\ln d_{2} &\sim \text{Gaussian}(\mu_{2}, \sigma_{2}) \\
+%\end{align*}
+%\end{minipage}
+%%
 We implemented this model using the probabilistic programming language WebPPL \cite{dippl}, and found the credible values of the parameters and the posterior predictive distributions of the data by running MCMC for 100,000 iterations, discarding the first 50,000 for burnin.
 %
 %The parametrized priors are a reasonable description of the prior elicitation data, though 
 
 The priors elicited cover a range of possible parameter values as intended (Figure \ref{fig:priorScatter}, scatter), resulting in parametrized distributions of dramatically different shapes (insets).  
-We observe a correlation in our items between the mean \% of Americans who have \textsc{done action} before (Question 1) and the mean log-frequency  of action (Question 2) ($r_{1,2} = 0.74; r^2_{1,2} = 0.55$); our items that tend to be more popular actions also tend to be more frequent actions (e.g. \textsc{wears socks}) and visa-versa (e.g. \textsc{steals cars}), though there are notable exceptions (e.g. \textsc{plays the banjo} is not popular but done frequently when done at all, as is \textsc{smokes cigarettes}; \textsc{goes to the movies} is a popular activity though not done very often). 
+We observe a correlation in our items between the mean \% of Americans who have \textsc{done action} before (Question 1) and the mean log-frequency  of action (Question 2) ($r_{1,2} = 0.74; r^2_{1,2} = 0.55$); items that tend to be more popular actions also tend to be more frequent actions (e.g. \textsc{wears socks}) and visa-versa (e.g. \textsc{steals cars}), though there are notable exceptions (e.g. \textsc{plays the banjo} is not popular but done frequently when done at all, as is \textsc{smokes cigarettes}; \textsc{goes to the movies} is a popular activity though not done very often). 
 This diversity is relevant because the speaker model (Eq.~\ref{eq:S2}) will produce habitual sentences (e.g. \emph{Sam goes to the movies / goes to the ballet.}) contingent on the shape of the prior distribution. 
 
 From the inferred parameters and assumed functional forms, we get an inferred $P(\lambda)$ modeled as a mixture of individuals with the possibility of carrying out the action and those without the possibility of doing it. 
@@ -307,6 +309,7 @@ That is, $P(\lambda)$ was constructed by sampling $\lambda$ as follows:
 %\end{minipage}
 In addition to specifying the correct way to combine our two prior-elicitation questions, using this inferred prior in our language model solves two difficulties: (1) It smooths effects that are clearly results of the response format\footnote{For example, a very common rating is \emph{1 time per year}. Presumably participants would be just as happy reporting \emph{approximately} 1 time per year; the raw data does not reflect this due to demands of the dependent measure.} 
 and (2) it better captures the tails of the prior distribution which have relatively little data and need to be regularized by the analysis model.
+Figure \ref{fig:priorScatter}, insets, shows examples of these inferred priors.
 %, which receive such low probability to require many more participants in order to sample accurately.
 
 Some items show substantial differences between the genders (e.g. \textsc{wears a bra}) and some show subtle differences (e.g. \textsc{watches professional football}). 
