--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -395,7 +395,7 @@ To construct the posterior predictive distribution over responses, we collected 
 The Maximum A-Posteriori (MAP) value and 95\% highest probability density (HPD) interval for $\alpha$ is 5.7 [5.1,6.2].
 %The MAP and HPD interval for the data-analytic guessing parameter is 0.004 [0.0003, 0.03], suggesting that there is not a substantial amount of the data that is better explained by a model of random guessing than by our pragmatic speaker model.
 
-The probabilistic pragmatics model does a good job of accounting for the variability in responses ($r^2(93) = 0.94$), including actions done on the time scale of years or more  ($r^2(50) = 0.92$) (Figure \ref{fig:tjScatters} right).
+As shown in Figure \ref{fig:tjScatters}, right, the probabilistic pragmatics model does a good job of accounting for the variability in responses ($r^2(93) = 0.94$), including actions done on the time scale of years or more  ($r^2(50) = 0.92$).
 The model decides when the habitual is a useful way to describe the person's behavior, assuming that what the person did in the past is representative. 
 This raises an interesting question: Does the propensity communicated by the habitual indicate an objective, past frequency or a subjective, future expectation?
 
@@ -410,9 +410,9 @@ This raises an interesting question: Does the propensity communicated by the hab
 While past frequency is often a good indicator of future tendency, people can change abruptly due to a variety of decisions and outside events.
 Does habitual language communicate propensity in terms of past frequency or future expectations?
 In this set of experiments, we address this by introducing causal factors that enable or prevent future actions (e.g. buying a pack of cigarettes; developing an allergy).
-In Expt.~3a, we measure \emph{predictive frequency} when these causal factors are introduced as well as when just a past frequency is observed.
+In Expt.~3a, we measure \emph{predictive frequency} when these causal factors are introduced as well as when past frequency alone is observed.
 In Expt.~3b, we examine felicity judgments of the habitual sentence (e.g. \emph{John smokes cigarettes.}; \emph{John eats peanut butter.}) in the presence of these causal modifiers.
-This will allow us to test whether habituals are best explained by as a speaker $S_2$ who wants to communicate past or \emph{predictive} frequency.
+This will allow us to test whether habituals are best explained by as a speaker $S_2$ who wants to communicate past or predictive frequency.
 % and use the speaker $S_2$ model to predict the truth judgments using the elicited \emph{predictive frequency}  as the input to the model.
 %\ndg{pose the question of this expriment more clearly: is propensity about past frequency or future expectations? then say briefly how we address it.}
 
@@ -441,25 +441,25 @@ Additionally, on one third of the trials, participants were presented with a \te
 On one third of the trials, participants were presented with an \textbf{enabling sentence} (\emph{Yesterday, Bill bought a pack of cigarettes.}) %that sought to reinforce the past frequency that aimed to increase the acceptability of the habitual sentence when the past frequency evidence was not strong. 
 The final third of trials had no additional evidence and were identical to Expt.~2. 
 
-%The only difference from Expt.~3 is in the dependent measure.
-Participants were asked ``In the next \textsc{time window}, how many times do you think \textsc{person} does \textsc{event}?'', where the \textsc{time window} was the same as given in the \emph{past frequency statement}.
-The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habituals/experiments/priors/predictive-1.html}.
-
-\subsubsection{Materials}
-
 Only twenty-one of the original thirty-one items were used in order to shorten the experiment.
 To increase expected variability, participants saw the frequencies that led to most intermediate endorsement of the habitual in Expt.~2. 
 In addition, we did not include trials for both male and female names for the select items we did in Expt.~2, since we saw no differences in their endorsements of the habitual.
 %The dependent measure was the same as in Expt.~2. 
 
+%The only difference from Expt.~3 is in the dependent measure.
+Participants were asked ``In the next \textsc{time window}, how many times do you think \textsc{person} does \textsc{event}?'', where the \textsc{time window} was the same as given in the \emph{past frequency statement}.
+The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habituals/experiments/priors/predictive-1.html}.
+
+
+
 \subsection{Behavioral results}
 
-Figure \ref{fig:tj3} (middle) shows the predicted future frequency as a function of the past frequency given to the participant and the type of causal information given (in color; confidence intervals suppressed and jitter added for visual clarity). 
+Figure \ref{fig:tj3} (left) shows the predicted future frequency as a function of the past frequency given to the participant and the type of causal information given (in color; confidence intervals suppressed and jitter added for visual clarity). 
 We observe in the baseline condition that future frequency perfectly tracks past frequency (e.g. participants believe if a person smoked cigarettes 3 times last month, they will smoke cigarettes 3 times next month). 
 This means that our model makes identical predictions for Expt.~2 whether the target is past frequency or expected future frequency (indicating, as expected, that we must look to the new data to distinguish these models).
 % the assumption we used in our model of Expt.~2, where the speaker model intended to communicate past frequency.
 %; testing the correspondence of past frequency with future frequency allows us validate the model predictions in Expt.~2 (where past frequency was assumed to be the target of communication).
-Critically, we observe the preventative information appreciably decreasing and the enabling information slightly increasing predicted frequency (Figure \ref{fig:tj3} middle; blue and green dots).
+Critically, we observe the preventative information appreciably decreasing and the enabling information slightly increasing predicted frequency (Figure \ref{fig:tj3} left; blue and green dots).
 
 
 
@@ -487,10 +487,19 @@ There is a clear and consistent negative effect of preventative information on t
 When collapsing across items and subjecting the data to a mixed-effects model with random by-participant effects of intercept and random by-item effects of intercept and conditions, we find evidence for a small effect of \emph{enabling} conditions on endorsements (M =  0.89 95\% Bootstrapped CI [0.88, 0.91]) as compared to baseline (M = 0.85 [0.83, 0.87]) [$\beta = 0.42; SE = 0.15; z = 2.8; p = 0.005$], in addition to a large effect of \emph{preventative} conditions on endorsements (M = 0.29 [0.26, 0.31]) [$ \beta = -3.22; SE = 0.21; z = -15.2; p < 0.001$]. 
 %\mht{should I add points from Expt. 2 to left-most scatter, or maybe there is a better plot?}
 
+We use the mean predicted log frequency from Expt.~3a as the input to the speaker $S_2$ model to predict the felicity judgments measured in Expt.~3b.
+We infer the one model parameter using the same analysis approach in Expt.~2. 
+The model matches the data well ($r^2(63) = 0.91$; Figure \ref{fig:tj3}, right).
+The same model using the past frequency as the object of communication matches the data poorly ($r^2(63) = 0.02$).
+These results suggest that the felicity of habituals is based on an underlying scale of predicted future propensity, or frequency, not the mere observed frequency in the past.
+
 Interestingly, we observe endorsements in this experiment that are appreciably higher than in Expt.~2 for the same items (Figure \ref{fig:tj3}, middle; red vs. purple points). 
-This may be due, in part, to an effect of the experiment context on participants: Participants are viewing extra information that strongly disables the action from occurring in may cases; when that information is not present, participants may be more inclined to endorse the habitual.
-This may the be result of an inferential process about the experimenter's beliefs on behalf of the participant: Because the distribution of frequencies in this task was more limited than those used in Expt.~2, the participant may infer that the experimenter believes this to be a representative range and adjust her judgments accordingly.
-Future investigation into this issue is warranted.
+This may be due, in part, to an effect of the experiment context on participants: 
+in this experiment the overall population of frequencies is much lower (both because we selected moderate frequencies from Expt.~2 and because of the preventative information) and participants may infer that the experimenter believes this to be a representative range and adjust judgments accordingly. Future investigation into this issue is warranted.
+
+%Participants are viewing extra information that strongly disables the action from occurring in may cases; when that information is not present, participants may be more inclined to endorse the habitual.
+%This may the be result of an inferential process about the experimenter's beliefs by the participant: Because the distribution of frequencies in this task was more limited than those used in Expt.~2, the participant may infer that the experimenter believes this to be a representative range and adjust her judgments accordingly.
+%Future investigation into this issue is warranted.
 % the frequencies supplied in the task
 %\ndg{we should think about where in the model this calibration effect would be seen. Overall it would be nice to tie this expt more to the model, even if in a relatively shallow way.}
 
@@ -530,17 +539,13 @@ Future investigation into this issue is warranted.
 
 %\subsection{Model results}
 
-We use the mean predicted log frequency from Expt.~3a as the input to the speaker $S_2$ model to predict the felicity judgments measured in Expt.~3b.
-We infer the one model parameter using the same analysis approach in Expt.~2. 
-The model matches the data well ($r^2(63) = 0.91$; Figure \ref{fig:tj3}, right).
-The same model using the past frequency as the object of communication matches the data poorly ($r^2(63) = 0.02$).
-These results suggest that the felicity of habituals is based on an underlying scale of predicted future propensity, or frequency, not the mere observed frequency in the past.
 
 
 \section{Discussion}
 
 We presented a computational model for communicating generalizations about events.
-The model decides if a habitual is a useful way to describe a person's behavior, taking into account the listener's prior beliefs about the action --- how common it is and the likely frequency (measured in Expt.~1) --- and the basic conversational principles to be truthful and informative.
+The model decides if a habitual sentence is a pragmatically useful way to describe a person's behavior, taking into account the listener's prior beliefs about the action---how common it is and the likely frequency (measured in Expt.~1).
+% --- and the basic conversational principles to be truthful and informative.
 We validated this model by eliciting felicity judgments for habitual sentences covering a wide range of activities with a wide range of experimentally manipulated frequencies of action (Expt.~2).
 We further investigated the nature of the underlying ``propensity'' scale by introducing enabling and disabling evidence, measuring the predicted future frequency (Expt.~3a) and using that to predict the felicity of habitual sentences (Expt.~3b). 
 To our knowledge, the experiments presented here are first empirical investigations into the truth conditions of habitual sentences and the first test of a formal model of habitual sentences.
@@ -556,16 +561,18 @@ The model we present here is almost identical to a model we have used to describ
 This provides a formal bridge between generalizations of properties about categories (i.e. \emph{generics}) and generalizations about individuals and events (i.e. \emph{habituals}), a connection often noted in the linguistics literature \cite{Carlson1977, Carlson2005, Cohen1999}. 
 Generics often use a bare plural (e.g. \emph{Bears like to eat ants.}) and don't lay claim to any well-defined set of individuals (e.g. many bears may not like to eat ants).
 Habituals use the simple present tense (e.g. \emph{John smokes}) without any well-defined period of time (e.g. John may go many days without smoking). 
-In both cases, we are able to explain the varying truth conditions of these kinds of sentences by using a pragmatically inferred threshold on the set of individuals or on the period of time, respectively. 
+In both cases, we are able to explain the varying truth conditions of these kinds of sentences by using a pragmatically inferred threshold on
+prevalence or propensity, respectively.
+% the set of individuals or on the period of time, respectively. 
 Scales, and scalar representations, provide a simple and general quantitative way to express truth conditions.
 %In the psychological literature, habituals have received relatively little attention compared to \emph{generics}. 
 
-We explore generalizations about events using the domain of human behavior as it provides a well-defined domain of events with wide variability in frequency of occurrence.
-We have preliminary evidence from Expt.~2 that the prior over which the intended meaning is derived $P(\lambda)$ is with respect to individuals from both genders: Felicity judgments did not vary appreciably across the two genders, even when the $P_{gender}(\lambda)$ did. 
-This begins addresses one aspect of the \emph{contrast class} with respect to which generic or habitual meaning is computed. 
-In general, the issue of how a contrast class is derived remains mysterious but it is central to understanding how the meanings of vague bits of language arise.
-% with respect to events in general, and future work should address this. 
-%\ndg{this paragraph is weak... figure out what we want to say, or remove.}
+%We explore generalizations about events using the domain of human behavior as it provides a well-defined domain of events with wide variability in frequency of occurrence.
+%We have preliminary evidence from Expt.~2 that the prior over which the intended meaning is derived $P(\lambda)$ is with respect to individuals from both genders: Felicity judgments did not vary appreciably across the two genders, even when the $P_{gender}(\lambda)$ did. 
+%This begins addresses one aspect of the \emph{contrast class} with respect to which generic or habitual meaning is computed. 
+%In general, the issue of how a contrast class is derived remains mysterious but it is central to understanding how the meanings of vague bits of language arise.
+%% with respect to events in general, and future work should address this. 
+%%\ndg{this paragraph is weak... figure out what we want to say, or remove.}
 
 %Though we validate this model using the speaker component $S_2$ for the evaluation of the felicity of habitual sentences, this model naturally extends to capture \emph{comprehension} of habitual language using the listener $L_1$ component.
 
