--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -212,7 +212,7 @@ In Expts.~1\&2, we explore this issue.
 
 \begin{figure*}[t]
 \centering
-  \includegraphics[width=\textwidth]{prior-scatter-insets}
+  \includegraphics[width=\textwidth]{prior-scatter-insets2}
   \caption{Frequency prior distributions empirically elicited for thirty-one events for both male and female genders. Prior distributions are summarized by $\theta$ --- the proportion of people who have done the action before --- and $\gamma$ --- the mean log frequency of doing the action (for people who had done it before).  Inset plots display posterior predictive distributions on frequency using the structured Bayesian model in Eq.~\ref{eq:priorModel}. Error bars denote 95\% Bayesian credible intervals.}
   \label{fig:priorScatter}
 \end{figure*}
